[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Gui/Week.gd" type="Script" id=1]
[ext_resource path="res://assets/art/gui/calendar.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "week"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CalendarSheetStatic:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CalendarSheetDynamic:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CalendarSheetDynamic:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 484.499, 238.45 ), Vector2( 484.499, 238.45 ), Vector2( 484.499, 700 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CalendarSheetDynamic:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.6, 10.0, 0.0 ]
}

[node name="Week" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/week = SubResource( 1 )

[node name="CalendarSheetStatic" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 484.499, 238.45 )

[node name="Sprite" type="Sprite" parent="CalendarSheetStatic"]
texture = ExtResource( 2 )
hframes = 2

[node name="Label" type="Label" parent="CalendarSheetStatic"]
margin_left = -23.75
margin_top = -22.8
margin_right = 23.25
margin_bottom = -8.79999
text = "Week x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalendarSheetDynamic" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 484.499, 238.45 )

[node name="Sprite" type="Sprite" parent="CalendarSheetDynamic"]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Label" type="Label" parent="CalendarSheetDynamic"]
margin_left = -23.75
margin_top = -22.8
margin_right = 23.25
margin_bottom = -8.79999
text = "Week x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
visible = false
margin_left = 459.799
margin_top = 312.549
margin_right = 499.799
margin_bottom = 326.549
text = "Money x"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
